[gd_scene format=3 uid="uid://luy7w0qfph84"]

[ext_resource type="Script" uid="uid://chmo46pkxaexp" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://c4cxc648kj8ew" path="res://player/interaction_raycast.gd" id="2_8t03j"]
[ext_resource type="Texture2D" uid="uid://dgh3ul6rjlkgi" path="res://assets/reticles/white_reticle.png" id="2_g1dw6"]
[ext_resource type="PackedScene" uid="uid://bnvad8jy4rflu" path="res://player/interaction_controller.tscn" id="2_rkbax"]
[ext_resource type="PackedScene" uid="uid://6jf0qtg7yfwg" path="res://assets/others/wood_particle_scene.tscn" id="3_2ieo8"]
[ext_resource type="Texture2D" uid="uid://d1jemmogcuxvf" path="res://assets/reticles/tile_0155.png" id="3_qjkh3"]
[ext_resource type="Texture2D" uid="uid://bgj2lgeergj4y" path="res://assets/reticles/tile_0156.png" id="4_g6k8r"]
[ext_resource type="Texture2D" uid="uid://byr22t5vpx7n7" path="res://assets/reticles/use_reticle.png" id="5_2ieo8"]
[ext_resource type="AudioStream" uid="uid://balac254rkql0" path="res://assets/sound_effects/footstep05.ogg" id="8_hg6s5"]
[ext_resource type="PackedScene" uid="uid://tascqdeiqxem" path="res://player/inventory_controller.tscn" id="9_2ieo8"]
[ext_resource type="AudioStream" uid="uid://b6cflqkbf4htm" path="res://assets/sound_effects/jump.ogg" id="9_8t03j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ebec5"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2ieo8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qjkh3"]
radius = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hg6s5"]

[sub_resource type="SphereMesh" id="SphereMesh_g6k8r"]
lightmap_size_hint = Vector2i(11, 6)
material = SubResource("StandardMaterial3D_hg6s5")
radius = 0.3
height = 0.6
radial_segments = 4
rings = 1

[sub_resource type="Shader" id="Shader_hg6s5"]
code = "shader_type canvas_item;

uniform float rect_width_px;
uniform float fade_width_px = 100.0;
uniform float fade_strength : hint_range(0.0, 1.0) = 0.5;

void fragment() {
    float pixel_x = UV.x * rect_width_px;

    // Fade from 0 (transparent) at 0 px to 1 (opaque) at fade_width_px
    float fade = smoothstep(0.0, fade_width_px, pixel_x);
	float noise = fract(sin(dot(UV.xy ,vec2(12.9898,78.233))) * 43758.5453);
	fade += (noise - 0.5) * 0.02;  // small noise adjustment
	fade = clamp(fade, 0.0, 1.0);

    COLOR = vec4(0.0, 0.0, 0.0, fade * fade_strength);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rgyib"]
shader = SubResource("Shader_hg6s5")
shader_parameter/rect_width_px = 960.0
shader_parameter/fade_width_px = 240.0
shader_parameter/fade_strength = 0.745

[node name="Player" type="CharacterBody3D" unique_id=1431506852]
script = ExtResource("1_oul6g")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="." unique_id=1015043872]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="." unique_id=1602502604]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_ebec5")

[node name="StandupCheck" type="ShapeCast3D" parent="." unique_id=1734829332]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
shape = SubResource("CapsuleShape3D_2ieo8")
target_position = Vector3(0, 2, 0)

[node name="InteractableCheck" type="Area3D" parent="." unique_id=1508821427]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableCheck" unique_id=1313605587]
shape = SubResource("SphereShape3D_qjkh3")

[node name="Head" type="Node3D" parent="." unique_id=648906542]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Eyes" type="Node3D" parent="Head" unique_id=1654690764]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0795133, 0.38435, 0)

[node name="Camera3D" type="Camera3D" parent="Head/Eyes" unique_id=630740662]
unique_name_in_owner = true
cull_mask = 524285
current = true
fov = 90.0

[node name="InteractionRaycast" type="RayCast3D" parent="Head/Eyes/Camera3D" unique_id=638800491 node_paths=PackedStringArray("foot_cast")]
unique_name_in_owner = true
target_position = Vector3(0, 0, -3)
script = ExtResource("2_8t03j")
foot_cast = NodePath("../../../../FootCast")

[node name="Hand" type="Marker3D" parent="Head/Eyes/Camera3D" unique_id=1452369155]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="KeepNoteCameraUpdated" type="RemoteTransform3D" parent="Head/Eyes/Camera3D" unique_id=460273077]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/NoteCamera")

[node name="Effects" type="Node3D" parent="Head/Eyes" unique_id=1906671247]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="WoodParticle" parent="Head/Eyes/Effects" unique_id=1947344077 instance=ExtResource("3_2ieo8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="WoodParticle3" parent="Head/Eyes/Effects" unique_id=268140896 instance=ExtResource("3_2ieo8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="WoodParticle2" parent="Head/Eyes/Effects" unique_id=1337900344 instance=ExtResource("3_2ieo8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head" unique_id=803029714]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/SubViewportContainer" unique_id=1381366049]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="NoteCamera" type="Camera3D" parent="Head/SubViewportContainer/SubViewport" unique_id=2000631694]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0795133, 2.18435, 0)
cull_mask = 2
fov = 90.0

[node name="NoteHand" type="Marker3D" parent="Head/SubViewportContainer/SubViewport/NoteCamera" unique_id=1146004631]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, -0.25, -0.75)

[node name="ItemHand" type="Marker3D" parent="Head/SubViewportContainer/SubViewport/NoteCamera" unique_id=609034366]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, -0.25, -0.75)

[node name="LightViewport" type="SubViewport" parent="." unique_id=1716417405]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(16, 16)
render_target_update_mode = 4

[node name="LightDetection" type="Node3D" parent="LightViewport" unique_id=1042150431]
unique_name_in_owner = true

[node name="LightCamera" type="Camera3D" parent="LightViewport/LightDetection" unique_id=162301946]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.73379, 0)
fov = 20.0
size = 0.7
far = 1.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="LightViewport/LightDetection" unique_id=116581874]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0.85, 0)
layers = 524288
mesh = SubResource("SphereMesh_g6k8r")

[node name="GUI" type="Node" parent="." unique_id=1386943396]

[node name="ReticleLayer" type="CanvasLayer" parent="GUI" unique_id=1153110980]
layer = 3

[node name="CenterContainer" type="CenterContainer" parent="GUI/ReticleLayer" unique_id=541293789]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefaultReticle" type="TextureRect" parent="GUI/ReticleLayer/CenterContainer" unique_id=56229215]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_g1dw6")
stretch_mode = 3

[node name="HighlightReticle" type="TextureRect" parent="GUI/ReticleLayer/CenterContainer" unique_id=1501371847]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_qjkh3")
stretch_mode = 3

[node name="InteractingReticle" type="TextureRect" parent="GUI/ReticleLayer/CenterContainer" unique_id=1227056358]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("4_g6k8r")
stretch_mode = 3

[node name="UseReticle" type="TextureRect" parent="GUI/ReticleLayer/CenterContainer" unique_id=1312129836]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("5_2ieo8")
stretch_mode = 3

[node name="Debug" type="Label" parent="GUI/ReticleLayer" unique_id=1071583864]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="Debug2" type="Label" parent="GUI/ReticleLayer" unique_id=1206949534]
unique_name_in_owner = true
offset_left = 174.355
offset_right = 214.35487
offset_bottom = 23.0

[node name="InteractionText" type="Control" parent="GUI/ReticleLayer" unique_id=12440836]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ReticleLayer/InteractionText" unique_id=300620189]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 33.26001
offset_bottom = 33.26001
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionTextbox" type="Label" parent="GUI/ReticleLayer/InteractionText/VBoxContainer" unique_id=10415934]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Nothing Interesting Happens"
horizontal_alignment = 1

[node name="NoteLayer" type="CanvasLayer" parent="GUI" unique_id=1879739567]
layer = 2

[node name="NoteOverlay" type="Control" parent="GUI/NoteLayer" unique_id=691804515]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/NoteLayer/NoteOverlay" unique_id=1659356787]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSide" type="Control" parent="GUI/NoteLayer/NoteOverlay/HBoxContainer" unique_id=447750926]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightSide" type="Control" parent="GUI/NoteLayer/NoteOverlay/HBoxContainer" unique_id=115105296]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlackOverlay" type="ColorRect" parent="GUI/NoteLayer/NoteOverlay/HBoxContainer/RightSide" unique_id=189251201]
material = SubResource("ShaderMaterial_rgyib")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NoteContent" type="RichTextLabel" parent="GUI/NoteLayer/NoteOverlay/HBoxContainer/RightSide/BlackOverlay" unique_id=1161848440]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.

Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.

Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.

Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.

Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos."
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionController" parent="." unique_id=383099337 instance=ExtResource("2_rkbax")]
unique_name_in_owner = true

[node name="InventoryController" parent="." unique_id=845190897 instance=ExtResource("9_2ieo8")]
unique_name_in_owner = true

[node name="Audio" type="Node3D" parent="." unique_id=1305697393]

[node name="Footsteps" type="AudioStreamPlayer3D" parent="Audio" unique_id=1363212981]
unique_name_in_owner = true
stream = ExtResource("8_hg6s5")
volume_db = -25.0

[node name="Jump" type="AudioStreamPlayer3D" parent="Audio" unique_id=439359954]
unique_name_in_owner = true
stream = ExtResource("9_8t03j")
volume_db = -10.0
unit_size = 3.0

[node name="FootCast" type="RayCast3D" parent="." unique_id=1168391140]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0795133, -0.11564999, 0.100000024)
target_position = Vector3(0, 0, -1)
